# mlvajra

./: .gitignore  .pypirc  README.md  mlvajra.ipynb  mlvajrav0.1.docx  pyproject.toml  requirements.txt  ~$vajrav0.1.docx
.ipynb_checkpoints/: mlvajra-checkpoint.ipynb
data/: intakeUtils.py  preprocess_config.ini
doc/site/: 404.html
docs/: index.md  mkdocs.yml
docs/docs/: README.md
docs/site/: index.html  sitemap.xml
examples/: example_cm.csv.csv  example_cm.csv_matrix.csv  example_cm.html.html  example_cm.pycm  microservice_deploy.py  reg_metrics.json  testcase.py
examples/notebooks/: Data validation _undestanding-Tensorflow (TFX).ipynb  Data validation _undestanding-Tensorflow (TFX)_v0.1.ipynb
management/: AI_Project_Canvas_Editable.docx  Machine Learning Canvas v0.4 - public.docx  README.md
mkdocs/: mkdocs.yml
mlvajra/: README.md  __init__.py  __version__.py
mlvajra/Annotation/: snorkelAnnotation.py  textclf.py  timeseries.py
mlvajra/activelearning/: AL.py  __init__.py
mlvajra/data/: README.md  __init__.py  preprocess_config.ini  relationalDB.py  sparkutils.py
mlvajra/deploy/: clipper.py  tfx.py
mlvajra/evaluation/: __init__.py  eval.py
mlvajra/experiment/: Experiement.py  __init__.py  mlflow_experiement.py
mlvajra/explanations/: __init__.py  exp.py  globalExp.py  localExp.py
mlvajra/model/: DSL.py  __init__.py  vajron.py
mlvajra/preprocessing/: __init__.py  bkp.py  sklearnPreprocessing.py  tee2  tensorflowPreprocessing.py  torchPreprocessing.py  tsPreprocessing.py
model/: __init__.py
preprocessing/: pre_sklearn.py  skl.py  tee
(+37 files in other folders)
