[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "mlvajra"
author = "gurunath"
author-email = "gurunathrajagopal@gmail.com"
home-page = "https://github.com/rajagurunath/mlvajra"
classifiers = ["License :: OSI Approved :: Apache Software License"]

