[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "mlvajra"
author = "gurunath"
author-email = "gurunathrajagopal@gmail.com"
home-page = "https://github.com/rajagurunath/mlvajra"
description-file="README.md"
classifiers = ["License :: OSI Approved :: Apache Software License"]

[tool.flit.metadata.urls]
Documentation="https://mlvajra.readthedocs.io/en/latest/"
